# timescale-prometheus

./: go.mod  go.sum
cmd/timescale-prometheus/: main.go  main_test.go
extension/: Dockerfile  Makefile
extension/rust/: Cargo.toml
extension/rust/src/: lib.rs
extension/src/: support.c
pkg/api/: metrics.go  read.go  read_test.go  write.go  write_test.go
pkg/log/: log.go
pkg/pgclient/: client.go
pkg/pgmodel/: pgx.go  querier.go  querier_test.go  query_builder.go
pkg/pgmodel/end_to_end_tests/: concurrent_sql_test.go  create_test.go  drop_test.go  nan_test.go  query_integration_test.go  view_test.go
pkg/promql/: queriable.go
